# ns-pond-ingestion-workflow

./: .gitignore  PACKAGE_PLAN.md  README.md  pyproject.toml
configs/: settings_reference.yaml
ingestion-workflow/cli/: main.py
ingestion-workflow/clients/: openalex.py  pubmed.py
ingestion-workflow/config/: __init__.py
ingestion-workflow/extractors/: ace_extractor.py  base.py  elsevier_extractor.py  pubget_extractor.py
ingestion-workflow/models/: download.py  extract.py  ids.py
ingestion-workflow/services/: cache.py  create_analyses.py  id_lookup.py  search.py
ingestion-workflow/tests/: conftest.py
ingestion-workflow/workflow/: create_analyses.py  download.py  extract.py  gather.py  orchastrator.py  sync.py  upload.py
ingestion_workflow/: __init__.py  cli.py  config.py
ingestion_workflow/cli/: main.py
ingestion_workflow/clients/: coordinate_parsing.py  llm.py  openalex.py  pubmed.py  semantic_scholar.py
ingestion_workflow/config/: __init__.py
ingestion_workflow/extractors/: __init__.py  ace_extractor.py  base.py  elsevier_extractor.py  pubget_extractor.py  utils.py
ingestion_workflow/llm/: __init__.py  base.py
ingestion_workflow/logging_utils/: __init__.py  logger.py
ingestion_workflow/metadata/: __init__.py  base.py  enrichment.py
ingestion_workflow/models/: __init__.py  analysis.py  cache.py  coordinate_parsing.py  core.py  download.py  export_dir.py  export_schema.py  extract.py  ids.py  metadata.py  statistics.py  upload.py
ingestion_workflow/neurostore/: __init__.py  client.py
ingestion_workflow/patches/: __init__.py  ace_patch.py
ingestion_workflow/pipeline/: __init__.py  gather.py  orchestrator.py  provenance.py  state.py
ingestion_workflow/processors/: __init__.py  base.py  default_processor.py  runner.py
ingestion_workflow/services/: __init__.py  cache.py  create_analyses.py  db.py  export.py  file_sync.py  id_lookup.py  logging.py  metadata.py  search.py  upload.py  upload_models.py
ingestion_workflow/storage/: __init__.py  manager.py
ingestion_workflow/tests/: conftest.py
ingestion_workflow/utils/: __init__.py  progress.py
ingestion_workflow/workflow/: common.py  create_analyses.py  download.py  extract.py  gather.py  hydration.py  stats.py  (+3 more)
scripts/: generate_manifest.py  prune_create_analyses_cache.py  run_elsevier_tables.py  run_playground_pipeline.py
tests/: conftest.py  test_ace_extractor.py  test_elsevier_extractor.py  test_metadata_enrichment.py  test_processing_stage.py  test_provenance_logger.py  test_pubget_extractor.py
(+576 files in other folders)
