[project]
name = "ingestion-workflow"
version = "0.1.0"
description = "Modular ingestion workflow for Neurostore data pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Ingestion Workflow Team" }
]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.5",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "openai>=1.35.0",
  "pandas>=2.2",
  "lxml>=4.9",
  "beautifulsoup4>=4.12",
  "readabilipy~=0.3.0",
  "regex>=2024.5.15",
  "SQLAlchemy>=2.0",
  "simplejson>=3.19",
  "xmltodict>=0.13",
  "seleniumbase>=4.34",
  "tqdm>=4.66",
  "filelock>=3.15",
  "pubget @ git+https://github.com/neuroquery/pubget.git@main",
  "ACE @ git+https://github.com/neurosynth/ACE.git@master",
  "elsevier-coordinate-extraction @ git+https://github.com/neurostuff/elsevier_coordinate_extractor.git@main",
  "pyarty @ git+https://github.com/jdkent/pyarty.git@main#egg=pyarty",
  "pydantic-settings>=2.5",
  "sshtunnel>=0.4",
  "psycopg[binary]>=3.1",
  "shortuuid>=1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-cov>=4.1",
  "pytest-recording>=0.13",
]
lint = [
  "ruff>=0.6",
]

[project.scripts]
ingest = "ingestion_workflow.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion_workflow*"]

[tool.ruff]
target-version = "py39"
line-length = 99
src = ["ingestion_workflow"]

[tool.ruff.lint]
select = ["E", "F", "I"]
